--- a/DeepSpace/nbproject/project.properties
+++ b/DeepSpace/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=deepspace.DeepSpace
+main.class=deepspace.TestP1
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
